Perkin-UAT/force-app/main/default/objects/SMAX_PS_MTE_Change_Log__c/SMAX_PS_MTE_Change_Log__c.object-meta.xml
<CustomObject>
    <description>Used to track changes for MTE.  The MTE is stored as an Installed product.  This table is populated when the IP record for an MTE record is updated</description>
    <label>MTE Change Log</label>
    <nameField>
        <displayFormat>MCL-{0000000}</displayFormat>
        <label>MTE Change Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MTE Change Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>