Perkin-UAT/force-app/main/default/objects/SMAX_PS_MTE_Change_Log__c/fields/MTE_Custom_Calibration_Period__c.field-meta.xml
<CustomField>
    <fullName>MTE_Custom_Calibration_Period__c</fullName>
    <description>From MTE IP - is set at time of record creation based on value of formula on IP</description>
    <inlineHelpText>Fixed at time of record creation to current value from MTE IP record.</inlineHelpText>
    <label>MTE Custom Calibration Period</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>