Perkin-UAT/force-app/main/default/objects/SMAX_PS_MTE_Change_Log__c/fields/SMAX_PS_Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Installed_Product__c</fullName>
    <label>Installed Product</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>MTE Change Logs</relationshipLabel>
    <relationshipName>MTE_Change_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>