Perkin-UAT/force-app/main/default/objects/SMAX_PS_MTE_Change_Log__c/fields/SMAX_PS_Is_Calibrated__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Is_Calibrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Calibrated</label>
    <type>Checkbox</type>
</CustomField>