Perkin-UAT/force-app/main/default/objects/SMAX_PS_MTE_Change_Log__c/fields/SMAX_PS_Last_Calibration_Date__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Last_Calibration_Date__c</fullName>
    <label>Last Calibration Date</label>
    <type>Date</type>
</CustomField>