Perkin-UAT/force-app/main/default/objects/SMAX_PS_MTE_Change_Log__c/fields/SMAX_PS_Location__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>MTE Change Logs</relationshipLabel>
    <relationshipName>MTE_Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>