Perkin-UAT/force-app/main/default/objects/SMAX_PS_MTE_Change_Log__c/fields/SMAX_PS_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Model_Number__c</fullName>
    <label>Model Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>