Perkin-UAT/force-app/main/default/objects/SMAX_PS_MTE_Change_Log__c/fields/SMAX_PS_MTE_Change_Description__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_MTE_Change_Description__c</fullName>
    <label>MTE Change Description</label>
    <type>TextArea</type>
</CustomField>