Perkin-UAT/force-app/main/default/objects/SMAX_PS_MTE_Change_Log__c/fields/SMAX_PS_MTE_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_MTE_Change_Reason__c</fullName>
    <label>MTE Change Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>