Perkin-UAT/force-app/main/default/objects/SMAX_PS_MTE_Change_Log__c/fields/SMAX_PS_MTE_Custom_Calibration_Period_Nu__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_MTE_Custom_Calibration_Period_Nu__c</fullName>
    <label>MTE Custom Calibration Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>