Perkin-UAT/force-app/main/default/objects/SMAX_PS_MTE_Change_Log__c/fields/SMAX_PS_PKI_MTE_ID__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_PKI_MTE_ID__c</fullName>
    <label>PKI MTE ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>