Perkin-UAT/force-app/main/default/objects/SMAX_PS_MTE_Change_Log__c/fields/SMAX_PS_Recalculate_MTE_Period__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Recalculate_MTE_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate MTE Period</label>
    <type>Checkbox</type>
</CustomField>