Perkin-UAT/force-app/main/default/objects/SMAX_PS_MTE_Change_Log__c/fields/SMAX_PS_Serial_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Serial_Lot_Number__c</fullName>
    <label>Serial/Lot Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>