Perkin-UAT/force-app/main/default/objects/SMAX_PS_MTE_Change_Log__c/fields/SMAX_PS_Technical_Manager__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Technical_Manager__c</fullName>
    <description>Text value of formula from MTE IP Record at time of record create</description>
    <label>Technical Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>