Perkin-UAT/force-app/main/default/objects/SMAX_PS_MTE_Change_Log__c/fields/SMAX_PS_Tool_Status__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Tool_Status__c</fullName>
    <label>Tool Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>