Perkin-UAT/force-app/main/default/objects/SMAX_PS_MTE_Change_Log__c/fields/SMAX_PS_Top_Level__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Top_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Top Level</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>MTE Change Logs (Top Level)</relationshipLabel>
    <relationshipName>MTE_Change_Logs_Top_Level</relationshipName>
    <type>Lookup</type>
</CustomField>