Perkin-UAT/force-app/main/default/objects/SMAX_PS_MTE_Change_Log__c/fields/Summary_of_Changes__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Changes__c</fullName>
    <description>Will list out the changes mad to the record</description>
    <label>Summary of Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>